[gd_scene load_steps=6 format=3 uid="uid://b3rs8v8gvrxu7"]

[ext_resource type="Script" path="res://scripts/weapons/bullets/light_round.gd" id="1_5p2qk"]
[ext_resource type="Texture2D" uid="uid://c5jovxmppyecs" path="res://sprites/weapons/bullets/pellet_sprite.png" id="1_icifb"]
[ext_resource type="PackedScene" uid="uid://cym6sqiwdcxpw" path="res://scenes/components/damager_component.tscn" id="2_4vm2v"]
[ext_resource type="PackedScene" uid="uid://bkf4oqcrm8n6" path="res://scenes/vfx/trail.tscn" id="3_x0xmm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f4hpi"]
radius = 2.82843

[node name="LightRound" type="Node2D"]
script = ExtResource("1_5p2qk")
damage = 15.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_icifb")

[node name="Trail" parent="." instance=ExtResource("3_x0xmm")]

[node name="DamagerComponent" parent="." instance=ExtResource("2_4vm2v")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagerComponent"]
shape = SubResource("CircleShape2D_f4hpi")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="collided_with_hitbox" from="DamagerComponent" to="." method="_on_damager_component_collided_with_hitbox"]
[connection signal="collided_with_object" from="DamagerComponent" to="." method="_on_damager_component_collided_with_object"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
